<resources>
    <string name="app_name">FinalAplication</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="app_name2">CALCULADORA</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_soma">+</string>
    <string name="btn_divisao">/</string>
    <string name="btn_multiplicao">*</string>
    <string name="btn_subtracao">-</string>
    <string name="btn_apagar">p</string>
    <string name="btn_igual">=</string>
    <string name="btn_ponto">,</string>


    <string name="ap_name">chamadas</string>
    <string name="email">E-mail</string>
    <string name="senha"> Senha</string>
    <string name="confirme"> Confirme a senha </string>

    <string name="N0">0</string>
    <string name="N1">1</string>
    <string name="N2">2</string>
    <string name="N3">3</string>
    <string name="N4">4</string>
    <string name="N5">5</string>
    <string name="N6">6</string>
    <string name="N7">7</string>
    <string name="N8">8</string>
    <string name="N9">9</string>
    <string name="asteristico">*</string>
    <string name="velha">#</string>

    <string name="apagar">C</string>
    <string name="ligar">LIGAR</string>


    <string name="app_nam">Calculandomedia</string>
    <string name="txt_calcular">Calcular Média</string>
    <string name="txt_nota1">Nota1</string>
    <string name="txt_nota2">Nota2</string>
    <string name="txt_nota3">Nota3</string>
    <string name="txt_nota4">Nota4</string>
    <string name="txt_resultado">Resultado =</string>
    <string name="title_activity_configuracao">Settings</string>

    <string name="edt_nome">Nome</string>
    <string name="edt_idade">Idade</string>
    <string name="edt_sexo">Sexo</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Mostrar Nome</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Adicione amigos a mensagens</string>
    <string-array name="pref_example_list_titles">
        <item>Sempre</item>
        <item>Quando possivel</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">sicronizar dados</string>

    <string name="pref_title_sync_frequency">sincronização</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>3 hora</item>
        <item>6 hora</item>
        <item>Nunca</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notificação</string>

    <string name="pref_title_new_message_notifications">novas notificações</string>

    <string name="pref_title_ringtone">Toque</string>
    <string name="pref_ringtone_silent">Silencioso</string>

    <string name="pref_title_vibrate">Vibração</string>

</resources>
